--- a/003_my_printf_v2/.vscode/settings.json
+++ b/003_my_printf_v2/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"ft_printf_utils.h": "c",
 		"ft_printf.h": "c",
-		"libft.h": "c"
+		"libft.h": "c",
+		"stdarg.h": "c",
+		"unistd.h": "c"
 	}
 }
