Finishing all the ft_\printf function

--- a/003_my_printf_v2/.vscode/tasks.json
+++ b/003_my_printf_v2/.vscode/tasks.json
@@ -1,23 +1,25 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "build my_printf",
-      "type": "shell",
-      "command": "gcc",
-      "args": [
-	"-g",
-        "-o",
-        "my_printf",
-        "main.c",
-        "ft_printf.c",
-        "Ft_printf_utils/*.c",
-        "Libft/*.c"
-      ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      }
-    }
-  ]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "build",
+            "type": "shell",
+            "command": "make",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
+        }
+    ]
 }
