--- a/003_my_printf_v2/Makefile_prev
+++ b/003_my_printf_v2/Makefile_prev
@@ -5,28 +5,28 @@ AR              =   ar
 ARFLAGS         =   rcs
 RM              =   rm -rf
 
-# Adding executable name
-EXEC_NAME       =   ft_printf_test
 
 SRC_DIR         =   src/Ft_printf_utils
 OBJ_DIR         =   ./obj
 LIBFT_PATH      =   ./src/Libft
 
+
 SRC             =   ft_printf ft_extract_val ft_fill_buffer ft_flush_buffer ft_init_data \
                     ft_pad_buf_wth_n_chrs ft_parse_flags ft_parse_fmt ft_print_chr \
                     ft_print_nbrs ft_print_str ft_putstr_buf_n ft_render_fmt \
-                    ft_set_str_pad_spaces ft_itoa_base_bfr ft_pad_nbr_wth_spaces \
-					ft_pad_nbr_wth_zeros 
+                    ft_set_str_pad_spaces
 
 # Paths to source and object files
 SRCS            =   $(addprefix $(SRC_DIR)/, $(addsuffix .c, $(SRC)))
 OBJS            =   $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(SRC)))
 
+
 # Libft static library
 LIBFT           =   $(LIBFT_PATH)/libft.a
 
+
 # Targets
-all: $(NAME) $(EXEC_NAME)
+all: $(NAME)
 
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
@@ -44,21 +44,15 @@ $(NAME): $(LIBFT) $(OBJS)
 $(LIBFT):
 	make -C $(LIBFT_PATH) all
 
-# Build the executable
-$(EXEC_NAME): $(NAME) main.c
-	$(CC) $(CFLAGS) -o $(EXEC_NAME) main.c $(NAME)
-
 # Clean object files and directories
 clean:
 	make -C $(LIBFT_PATH) clean
 	$(RM) $(OBJ_DIR)
-	$(RM) $(EXEC_NAME)  # Clean up the executable
 
-# Full clean (including the libftprintf.a and executable)
+# Full clean (including the libftprintf.a)
 fclean: clean
 	make -C $(LIBFT_PATH) fclean
 	$(RM) $(NAME)
-	$(RM) $(EXEC_NAME)  # Ensure the executable is removed on full clean
 
 # Rebuild everything
 re: fclean all
