--- a/003_my_printf_v2/.vscode/launch.json
+++ b/003_my_printf_v2/.vscode/launch.json
@@ -1,29 +1,26 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Launch my_printf",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/my_printf",  // Ensure this points to the right executable
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": true,
-      "MIMode": "gdb",
-      "preLaunchTask": "build my_printf",
-      "miDebuggerPath": "/usr/bin/gdb",
-      "setupCommands": [
+    "version": "0.2.0",
+    "configurations": [
         {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
+            "name": "Debug ft_printf",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/ft_printf_test",  // Updated to new executable name
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "build",
+            "miDebuggerPath": "/usr/bin/gdb"
         }
-      ],
-      "logging": {
-        "engineLogging": true
-      }
-    }
-  ]
+    ]
 }
