--- a/GetNextLineTries/0000_MyFirstTry/.vscode/settings.json
+++ b/GetNextLineTries/0000_MyFirstTry/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"files.associations": {
 		"cstdlib": "c",
 		"stdlib.h": "c",
-		"get_next_line.h": "c"
+		"get_next_line.h": "c",
+		"get_next_line_bonus.h": "c",
+		"stdio.h": "c",
+		"stddef.h": "c"
 	}
 }
